--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -7,6 +7,7 @@
 body {
   background-color: #f3f4f6;
   overflow: hidden;
+  /* padding-bottom: 30px; */
 }
 body::-webkit-scrollbar{
   display: none;
